--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "@mui/material": "^5.12.3",
     "@mui/styled-engine-sc": "^5.12.0",
     "@redux-devtools/extension": "^3.2.3",
+    "base64-arraybuffer": "^1.0.2",
     "express": "^4.17.2",
     "knex": "^2.3.0",
     "pg": "^8.8.0",
