--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "@redux-devtools/extension": "^3.2.3",
     "base64-arraybuffer": "^1.0.2",
     "express": "^4.17.2",
+    "image-compressor": "^2.0.3",
     "knex": "^2.3.0",
     "pg": "^8.8.0",
     "sqlite3": "^5.1.2",
